# koshelek-project

./: README.md  index.html  pyproject.toml
.github/workflows/: chromium_only.yml  testomatio.yml
1/: index.html
1/export/: influxDbData.txt
10/: index.html
10/data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
10/export/: influxDbData.txt  prometheusData.txt
10/history/: history-trend.json  history.json
10/widgets/: categories-trend.json  duration-trend.json  executors.json  retry-trend.json  severity.json  status-chart.json  (+1 more)
11/: index.html
12/: index.html
13/: index.html
14/: index.html
15/: index.html
16/: index.html
17/: index.html
18/: index.html
19/: index.html
2/: index.html
20/: index.html
21/: index.html
22/: index.html
23/: index.html
25/: index.html
26/: index.html
28/: index.html
29/: index.html
3/: index.html
30/: index.html
31/: index.html
32/: index.html
33/: index.html
34/: index.html
35/: index.html
36/: index.html
37/: index.html
38/: index.html
39/: index.html
4/: index.html
40/: index.html
41/: index.html
42/: index.html
43/: index.html
44/: index.html
45/: index.html
46/: index.html
47/: index.html
48/: index.html
49/: index.html
5/: index.html
50/: index.html
51/: index.html
52/: index.html
53/: index.html
54/: index.html
55/: index.html
56/: index.html
57/: index.html
6/: index.html
7/: index.html
8/: index.html
9/: index.html
last-history/: retry-trend.json
tests/: conftest.py  test_registration.py
(+1465 files in other folders)
